python-graph
A library for working with graphs in Python
--------------------------------------------------------------------------------

CHANGELOG

Release 1.2.0	[??? ?, 2008]

Enhancements:
	Moved to new class style;
	Added level-based ordering to breadth first search.
	
Fixes:
	Install now works with a prefix (Issue 10).
	Shortest path spanning trees did not had an explicit root.


Release 1.1.1	[Sep 4, 2008]

Enhancements:
	Improved install script.
	
Fixes:
	DOT Language output now works for nodes/edges labelled with spaces.
	
Important API Changes:
	get_neighbours() is now get_neighbors() (Issue 9).


Release 1.1.0	[Aug 31, 2008]

Enhancements:
	Hypergraph support (Issue 4);
	Complete and complement graph generation;
	Weights in random generated graphs (Issue 8).

Fixes:
	Fixed bug in cut-node identification;
	Fixed bug causing wrong results for graphs with nodes labelled with values that evaluate to False (Issue 7).

Important API Changes:
	get_edges() now return all edges in the graph;
	get_neighbours() has the former behaviour of get_edges().


Release 1.0.0	[Aug 01, 2008]

Adds some operations;
Random graph generation;
Cut-vertex/cut-edge identification.


Release 0.85	[Jul 27, 2008]

Adds DOT-Language output (Issue 1);
Install script included (Issue 3).


Release 0.75	[Jul 06, 2008]

Added XML import/export;
Docs are bundled now.


Release 0.65	[Jun 25, 2008]

DFS, BFS and MST can be generated for given roots;
Added Dijkstra's shortest path algorithm (Issue 2).


Release 0.50	[May 13, 2008]

Some API changes;
Nodes can now be arbitrary names/objects.


Release 0.45	[May 12, 2008]

Adds Prim's minimal spanning tree.


Release 0.40	[Mar 09, 2008]

Adds topological sorting;
Support for weighted graphs.


Release 0.30	[Aug 30, 2007]

Adds algorithms for accessibility and mutual accessibility.

Release 0.20	[Jul 16, 2007]

Adds breadth-first search;
API documentation.


Release 0.10	[Jul 10, 2007]

First release;