@@ -1,37 +1,29 @@
 <?xml version="1.0" ?>
 <graph>
-	<node id="Brazil"/>
 	<node id="Netherlands">
-		<arrow label="" to="Belgium" wt="1"/>
-		<arrow label="" to="Germany" wt="2"/>
+		<arrow label="" to="Belgium" wt="0.5"/>
+		<arrow label="" to="Germany" wt="7"/>
 	</node>
 	<node id="Italy">
-		<arrow label="" to="France" wt="3"/>
+		<arrow label="" to="France" wt="1"/>
 	</node>
 	<node id="Portugal">
 		<arrow label="" to="Spain" wt="1"/>
 	</node>
-	<node id="Lemuria">
-		<arrow label="" to="Atlantis" wt="1"/>
-		<arrow label="" to="Ys" wt="1"/>
-	</node>
 	<node id="Scotland">
-		<arrow label="" to="England" wt="2"/>
+		<arrow label="" to="England" wt="1"/>
 		<arrow label="" to="Wales" wt="1"/>
 	</node>
 	<node id="France">
-		<arrow label="" to="Spain" wt="3"/>
-		<arrow label="" to="Belgium" wt="2"/>
-		<arrow label="" to="Germany" wt="3"/>
-		<arrow label="" to="Italy" wt="3"/>
-	</node>
-	<node id="Wonderland">
-		<arrow label="" to="Atlantis" wt="1"/>
+		<arrow label="" to="Spain" wt="1"/>
+		<arrow label="" to="Belgium" wt="1"/>
+		<arrow label="" to="Germany" wt="1"/>
+		<arrow label="" to="Italy" wt="1"/>
 	</node>
 	<node id="Germany">
-		<arrow label="" to="France" wt="3"/>
-		<arrow label="" to="Belgium" wt="2"/>
-		<arrow label="" to="Netherlands" wt="2"/>
+		<arrow label="" to="France" wt="1"/>
+		<arrow label="" to="Belgium" wt="1"/>
+		<arrow label="" to="Netherlands" wt="7"/>
 	</node>
 	<node id="Ireland"/>
 	<node id="Wales">
@@ -39,26 +31,19 @@
 		<arrow label="" to="Scotland" wt="1"/>
 	</node>
 	<node id="Belgium">
-		<arrow label="" to="France" wt="2"/>
-		<arrow label="" to="Netherlands" wt="1"/>
-		<arrow label="" to="Germany" wt="2"/>
+		<arrow label="" to="France" wt="1"/>
+		<arrow label="" to="Netherlands" wt="0.5"/>
+		<arrow label="" to="Germany" wt="1"/>
 	</node>
 	<node id="England">
+		<attribute attr="shape" value="circle"/>
+		<attribute attr="color" value="red"/>
 		<arrow label="" to="Wales" wt="1"/>
-		<arrow label="" to="Scotland" wt="2"/>
-	</node>
-	<node id="Ys">
-		<arrow label="" to="Wonderland" wt="1"/>
-		<arrow label="" to="Brazil" wt="1"/>
-	</node>
-	<node id="Atlantis">
-		<arrow label="" to="Wonderland" wt="1"/>
-		<arrow label="" to="Brazil" wt="1"/>
-		<arrow label="" to="Lemuria" wt="1"/>
+		<arrow label="" to="Scotland" wt="1"/>
 	</node>
 	<node id="Spain">
 		<arrow label="" to="Portugal" wt="1"/>
-		<arrow label="" to="France" wt="3"/>
+		<arrow label="" to="France" wt="1"/>
 	</node>
 </graph>
 
