@@ -8,11 +8,15 @@ Release 1.2.0	[??? ?, 2008]
 
 Enhancements:
 	Moved to new class style;
-	Added level-based ordering to breadth first search.
+	Added level-based ordering to breadth first search;
+	Support for node and edge attributes.
 	
 Fixes:
 	Install now works with a prefix (Issue 10).
 	Shortest path spanning trees did not had an explicit root.
+
+Important API Changes:
+	breadth_first_search() now returns a tuple.
 
 
 Release 1.1.1	[Sep 4, 2008]
